CURRIKI-3347 Resource View/Edit: Tabs Wrap Fix
svn@16281

--- a/web/src/main/webapp/skins/curriki8/views.css
+++ b/web/src/main/webapp/skins/curriki8/views.css
@@ -290,9 +290,18 @@ ul#asset-tabs li a:hover {
 	background: #FFFFCF;
 	padding: 5px 10px;
 	border: 1px solid #000;
- 	clear: none;
- 	float: left; 
+ 	clear: left;
+ 	float: none; 
 }
+
+
+#asset-wrapper-inner, x:-moz-any-link {
+ 	clear: none;
+ 	float: left;
+}
+
+
+
 .asset-display-text {
 	clear: left;
 }
